<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.MainApp.HomePage.Task.CreateTask.CreateTaskFragment">

    <View
        android:id="@+id/close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/text"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/text" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="17sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|left"
        android:text="@string/create_task"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:helperTextTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintVertical_bias="0.02"
        app:startIconDrawable="@drawable/ic_title"
        app:startIconTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:hint="@string/title"
            android:paddingStart="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        app:layout_constraintVertical_bias="0.05"
        app:startIconDrawable="@drawable/ic_description"
        app:startIconTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:hint="@string/description"
            android:paddingStart="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/please_fill_in_all_fields"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/layout_description"
        app:layout_constraintVertical_bias="0" />

    <View
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/warning_text"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:text="@string/add_time"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.4" />

    <View
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:text="@string/add_date"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:text="@string/add_category"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/category"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/category"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/enter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:text="@string/create"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>