<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment.CreateAccountFragment">
    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintWidth_percent="0.4"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/text1"
        app:layout_constraintStart_toEndOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="@id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/main"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"/>

    <View
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/create_account_image"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintVertical_bias="0.2"/>
    
    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sign_in"
        android:background="@drawable/button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#8C8B8B"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintVertical_bias="0"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeTextType="uniform"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Sign Up"
        android:background="@drawable/button"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintVertical_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>